@@ -202,3 +202,5 @@ REL1_10_9: (released ...)
 - Adjusted 'ShowRedirectPageText' for stubbing
 - Adjusted 'RecentChangesManager' for stubbing
 - Adjusted 'SpecialPagesManager' for stubbing
+- Adjusted 'InterWikiLinkManager' for stubbing
+- Adjusted 'PageAfterAndBefore' for stubbing
